external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/positional_struct_autocomplete.ide.exp
note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:1:1
   │  
 1 │ ╭ module a::m {
 2 │ │ 
 3 │ │     public struct A(u64) has copy, drop;
 4 │ │ 
   · │
11 │ │     }
12 │ │ }
   │ ╰─^ Possible in-scope names: 'A -> a::m::A', 'B -> a::m::B', 'Option -> std::option::Option', 'Self -> a::m', 'option -> std::option', 'vector -> std::vector', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'

note[I15001]: IDE autocomplete
  ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:5:21
  │
5 │     public struct B(A) has copy, drop;
  │                     ^ Possible in-scope names: 'A -> a::m::A', 'B -> a::m::B', 'Option -> std::option::Option', or 'foo -> a::m::foo'

note[I15001]: IDE autocomplete
  ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:8:18
  │
8 │         let _s = B(A(0));
  │                  ^ Possible in-scope names: 'A -> a::m::A', 'B -> a::m::B', 'Option -> std::option::Option', or 'foo -> a::m::foo'

note[I15001]: IDE autocomplete
  ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:8:20
  │
8 │         let _s = B(A(0));
  │                    ^ Possible in-scope names: 'A -> a::m::A', 'B -> a::m::B', 'Option -> std::option::Option', or 'foo -> a::m::foo'

note[I15001]: IDE autocomplete
  ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:9:23
  │
9 │         let _tmp1 = _s.;
  │                       ^ Possible dot names: '0'

error[E01002]: unexpected token
  ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:9:24
  │
9 │         let _tmp1 = _s.;
  │                        ^
  │                        │
  │                        Unexpected ';'
  │                        Expected an identifier or a decimal number

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:10:24
   │
10 │         let _tmp2 = _s.0.;
   │                        ^ Possible dot names: '0'

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:10:25
   │
10 │         let _tmp2 = _s.0.;
   │                         ^ Possible dot names: '0'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:10:26
   │
10 │         let _tmp2 = _s.0.;
   │                          ^
   │                          │
   │                          Unexpected ';'
   │                          Expected an identifier or a decimal number

